--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@astrojs/prism": "^1.0.2",
-    "@astrojs/rss": "^2.0.0",
-    "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "5.0.4",
-    "@astrojs/vercel": "^6.1.0",
+    "@astrojs/prism": "^3.1.0",
+    "@astrojs/rss": "^4.0.9",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/vercel": "^7.8.2",
     "@markdoc/markdoc": "^0.2.1",
     "@tailwindcss/typography": "^0.5.9",
-    "astro": "^4.0.2",
+    "astro": "^4.16.7",
     "astro-markdoc-renderer": "0.0.1-alpha.1",
     "globby": "^13.1.3",
     "gray-matter": "^4.0.3",
